--- a/w3-xmldsig-schema/pom.xml
+++ b/w3-xmldsig-schema/pom.xml
@@ -42,6 +42,27 @@
 				<artifactId>maven-jaxb21-plugin</artifactId>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-schemas</id>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<artifacts>
+								<artifact>
+									<file>${wget.dir}/xmldsig-core-schema.xsd</file>
+									<type>xsd</type>
+								</artifact>
+							</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
