--- a/w3-xmlmime-schema/pom.xml
+++ b/w3-xmlmime-schema/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.w3.schemas</groupId>
+		<groupId>org.iru.external.org.w3.schemas</groupId>
 		<artifactId>w3-schemas</artifactId>
 		<version>1.1-SNAPSHOT</version>
 	</parent>
