--- a/w3-xmlmime-schema/pom.xml
+++ b/w3-xmlmime-schema/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.iru.external.org.w3.schemas</groupId>
 		<artifactId>w3-schemas</artifactId>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>w3-xmlmime-schema</artifactId>
